# lines_count

./: CMakeLists.txt  README.en.md  README.md
include/: file_processor.h  file_stats.h  thread_pool.h
src/: file_processor.cpp  main.cpp  thread_pool.cpp
